--- a/style.css
+++ b/style.css
@@ -13,6 +13,23 @@ body {
 } 
 
 /* article(product) styling */
+
+/* flex layout */
+.container {
+    display: flex;
+    gap: 30px;
+}
+
+.details {
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-1 {
+ flex-basis: 500px;
+ margin-top: 25px;
+}
+
 .product {
     width: 1120px;
     border: 7px solid #444;
@@ -64,7 +81,7 @@ body {
     background-color: black;
     width: 30px;
     height: 30px;
-    margin: 30px 10px;
+    margin: 30px 5px;
     display: inline-block;
 }
 
