--- a/style.css
+++ b/style.css
@@ -14,10 +14,16 @@ body {
 
 /* article(product) styling */
 .product {
-    width: 1120px;
+    width: 1200px;
     border: 7px solid #444;
     margin: 100px auto;
     position: relative;
+
+    /* grid layout */
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    column-gap: 50px;
+    align-items: center;
 }
 
 .product::before {
@@ -38,12 +44,18 @@ body {
     text-transform: uppercase;
     font-size: 35px;
     padding: 30px 0;
+
+    /*grid item alignment */
+    grid-column: 1 / -1;
 }
 
 
 .product__img {
-    width: 30%;
+    width: 100%;
     height: auto;
+
+    /*grid item alignment */
+    grid-column: 1 / 2;
 }
 
 
@@ -127,6 +139,9 @@ body {
     text-transform: uppercase;
     border-top: 7px solid black;
     cursor: pointer;
+
+    /*grid item alignment */
+    grid-column: 1 / -1;
 }
 
 .product__cart-btn:hover {
